--- a/notebooks/metadata_analysis.ipynb
+++ b/notebooks/metadata_analysis.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-13T18:09:15.020671Z",
-     "start_time": "2024-06-13T18:09:15.010437Z"
+     "end_time": "2024-06-13T20:28:31.753163Z",
+     "start_time": "2024-06-13T20:28:31.747923Z"
     }
    },
    "source": [
@@ -16,13 +16,13 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-13T18:09:16.657060Z",
-     "start_time": "2024-06-13T18:09:16.507326Z"
+     "end_time": "2024-06-13T20:28:32.107158Z",
+     "start_time": "2024-06-13T20:28:32.084134Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-13T18:09:20.197068Z",
-     "start_time": "2024-06-13T18:09:20.173853Z"
+     "end_time": "2024-06-13T20:28:33.388734Z",
+     "start_time": "2024-06-13T20:28:33.363635Z"
     }
    },
    "cell_type": "code",
@@ -104,7 +104,45 @@
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-13T20:31:09.338424Z",
+     "start_time": "2024-06-13T20:31:09.316482Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# how many distinct tasks have evaluation results\n",
+    "# this will be distinct number of strings that start with \"evaluation_\" and end with \"_results.json\" but if they have \"-on-\" in the middle, it still counts as one\n",
+    "\n",
+    "# Find distinct tasks with evaluation results\n",
+    "distinct_tasks_with_results = set()\n",
+    "\n",
+    "for file in json_files:\n",
+    "    if file.startswith(\"evaluation_\") and file.endswith(\"_results.json\"):\n",
+    "        if '-on-' in file:\n",
+    "            task_name = file[len('evaluation_'):file.index('-on-')]\n",
+    "            distinct_tasks_with_results.add(task_name)\n",
+    "\n",
+    "# Count the number of distinct tasks\n",
+    "num_distinct_tasks = len(distinct_tasks_with_results)\n",
+    "\n",
+    "print(f\"Number of distinct tasks with evaluation results: {num_distinct_tasks}\")"
+   ],
+   "id": "f9b8ce64054f0b6a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of distinct tasks with evaluation results: 1681\n"
+     ]
+    }
+   ],
+   "execution_count": 39
   },
   {
    "metadata": {},
@@ -112,7 +150,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "f9b8ce64054f0b6a"
+   "id": "8395b3bf6f60630e"
   }
  ],
  "metadata": {
