--- a/notebooks/metadata_analysis.ipynb
+++ b/notebooks/metadata_analysis.ipynb
@@ -109,8 +109,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-13T20:31:09.338424Z",
-     "start_time": "2024-06-13T20:31:09.316482Z"
+     "end_time": "2024-06-13T20:35:08.582652Z",
+     "start_time": "2024-06-13T20:35:08.575256Z"
     }
    },
    "cell_type": "code",
@@ -130,7 +130,18 @@
     "# Count the number of distinct tasks\n",
     "num_distinct_tasks = len(distinct_tasks_with_results)\n",
     "\n",
-    "print(f\"Number of distinct tasks with evaluation results: {num_distinct_tasks}\")"
+    "print(f\"Number of distinct tasks with evaluation results: {num_distinct_tasks}\")\n",
+    "\n",
+    "\n",
+    "# find average number of evaluations per task\n",
+    "total_evaluations = file_types['evaluation_results']\n",
+    "\n",
+    "average_evaluations_per_task = total_evaluations / num_distinct_tasks\n",
+    "\n",
+    "# format to 2 decimal places\n",
+    "average_evaluations_per_task = \"{:.2f}\".format(average_evaluations_per_task)\n",
+    "\n",
+    "print(f\"Average number of evaluations per task: {average_evaluations_per_task}\")"
    ],
    "id": "f9b8ce64054f0b6a",
    "outputs": [
@@ -138,11 +149,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of distinct tasks with evaluation results: 1681\n"
+      "Number of distinct tasks with evaluation results: 1681\n",
+      "Average number of evaluations per task: 5.68\n"
      ]
     }
    ],
-   "execution_count": 39
+   "execution_count": 42
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Organized dataframes that will be inserted into the PostgreSQL database:",
+   "id": "27eafa40b3f9bf63"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Dataframe 1: Tasks by Area\n",
+    "\n",
+    "For all 3371 tasks:\n",
+    "\n",
+    "Task1,Area,Parents,Children,NumEvaluations\n",
+    "\n",
+    "Task2,Area,Parents,Children,NumEvaluations\n",
+    "\n",
+    "Task3,Area,Parents,Children,NumEvaluations\n"
+   ],
+   "id": "9da5f7818d7cfe22"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Dataframe 2: Evaluations by Task\n",
+    "\n",
+    "For all 1681 tasks with evaluations:\n",
+    "\n",
+    "Task1,Eval1 (Dataset1),Metric1,Model1,Paper1,Date1\n",
+    "\n",
+    "Task1,Eval1 (Dataset1),Metric2,Model2,Paper2,Date2\n",
+    "\n",
+    "Task1,Eval1 (Dataset1),Metric3,Model3,Paper3,Date3\n",
+    "\n",
+    "Task1,Eval2 (Dataset2),Metric1,Model1,Paper1,Date1\n",
+    "\n",
+    "Task1,Eval2 (Dataset2),Metric2,Model2,Paper2,Date2\n",
+    "\n",
+    "Task2,Eval1 (Dataset1),Metric1,Model1,Paper1,Date1\n",
+    "\n",
+    "Task3,Eval1 (Dataset1),Metric1,Model1,Paper1,Date1\n",
+    "\n",
+    "Task3,Eval2 (Dataset2),Metric1,Model1,Paper1,Date1"
+   ],
+   "id": "5d19d7ed37cc285b"
   },
   {
    "metadata": {},
@@ -150,7 +210,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "8395b3bf6f60630e"
+   "id": "20f99c52854f2560"
   }
  ],
  "metadata": {
