verify api data augmentation success in notebook

--- a/notebooks/metadata_analysis.ipynb
+++ b/notebooks/metadata_analysis.ipynb
@@ -205,12 +205,196 @@
    "id": "5d19d7ed37cc285b"
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-23T00:36:14.956403Z",
+     "start_time": "2024-06-23T00:36:14.897157Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# load tasks_layman_descriptions.csv and count number of rows\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "tasks_layman_descriptions = pd.read_csv(\"../data/processed/tasks_layman_descriptions.csv\")\n",
+    "\n",
+    "num_tasks = tasks_layman_descriptions.shape[0]\n",
+    "\n",
+    "print(f\"Number of layman description tasks: {num_tasks}\")\n",
+    "\n",
+    "# load number of tassk in tasks_by_area.csv and count number of rows\n",
+    "\n",
+    "tasks_by_area = pd.read_csv(\"../data/processed/tasks_by_area.csv\")\n",
+    "\n",
+    "num_tasks_by_area = tasks_by_area.shape[0]\n",
+    "\n",
+    "print(f\"Number of tasks in tasks_by_area.csv: {num_tasks_by_area}\")\n",
+    "\n",
+    "# what percentage of tasks have layman descriptions\n",
+    "\n",
+    "percentage_tasks_with_layman_descriptions = (num_tasks / num_tasks_by_area) * 100\n",
+    "\n",
+    "# format to 2 decimal places\n",
+    "\n",
+    "percentage_tasks_with_layman_descriptions = \"{:.2f}\".format(percentage_tasks_with_layman_descriptions)\n",
+    "\n",
+    "print(f\"Percentage of tasks with layman descriptions: {percentage_tasks_with_layman_descriptions}%\")\n"
+   ],
+   "id": "20f99c52854f2560",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of layman description tasks: 3371\n",
+      "Number of tasks in tasks_by_area.csv: 3495\n",
+      "Percentage of tasks with layman descriptions: 96.45%\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-23T00:35:26.180519Z",
+     "start_time": "2024-06-23T00:35:26.138152Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# find list of 'id' in tasks_by_area.csv that are not in 'task' col of tasks_layman_descriptions.csv'\n",
+    "\n",
+    "tasks_by_area_ids = tasks_by_area['id'].tolist()\n",
+    "\n",
+    "tasks_layman_descriptions_ids = tasks_layman_descriptions['task'].tolist()\n",
+    "\n",
+    "tasks_without_layman_descriptions = [task for task in tasks_by_area_ids if task not in tasks_layman_descriptions_ids]\n",
+    "\n",
+    "print(f\"Tasks without layman descriptions: {tasks_without_layman_descriptions}\")"
+   ],
+   "id": "bc8bc446fcf0b40f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tasks without layman descriptions: []\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-23T00:36:54.884149Z",
+     "start_time": "2024-06-23T00:36:54.874207Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# return list of duplicate 'id' in tasks_by_area.csv \n",
+    "\n",
+    "duplicate_tasks_by_area = tasks_by_area[tasks_by_area.duplicated(subset=['id'], keep=False)]\n",
+    "\n",
+    "print(f\"Duplicate tasks in tasks_by_area.csv: {duplicate_tasks_by_area}\")"
+   ],
+   "id": "acb4034b3e64000a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate tasks in tasks_by_area.csv:                              area                                          id  \\\n",
+      "2                     methodology                  neural-network-compression   \n",
+      "9                     methodology                                     chatbot   \n",
+      "10                    methodology             multi-label-text-classification   \n",
+      "11                    methodology                          continual-learning   \n",
+      "13                    methodology                      cyber-attack-detection   \n",
+      "...                           ...                                         ...   \n",
+      "3360  natural-language-processing                             deep-clustering   \n",
+      "3459  natural-language-processing              open-domain-question-answering   \n",
+      "3466  natural-language-processing  semeval-2022-task-4-1-binary-pcl-detection   \n",
+      "3481  natural-language-processing                                 code-repair   \n",
+      "3491  natural-language-processing               multimodal-sentiment-analysis   \n",
+      "\n",
+      "                                              name  \\\n",
+      "2                       Neural Network Compression   \n",
+      "9                                          Chatbot   \n",
+      "10                 Multi-Label Text Classification   \n",
+      "11                              Continual Learning   \n",
+      "13                          Cyber Attack Detection   \n",
+      "...                                            ...   \n",
+      "3360                               Deep Clustering   \n",
+      "3459                Open-Domain Question Answering   \n",
+      "3466  SemEval-2022 Task 4-1 (Binary PCL Detection)   \n",
+      "3481                                   Code Repair   \n",
+      "3491                 Multimodal Sentiment Analysis   \n",
+      "\n",
+      "                                            description  \\\n",
+      "2                                                   NaN   \n",
+      "9     **Chatbot** or conversational AI is a language...   \n",
+      "10    According to Wikipedia \"In machine learning, m...   \n",
+      "11    **Continual Learning** (also known as **Increm...   \n",
+      "13    Cybersecurity attacks prediction using deep le...   \n",
+      "...                                                 ...   \n",
+      "3360                                                NaN   \n",
+      "3459  Open-domain question answering is the task of ...   \n",
+      "3466                                                NaN   \n",
+      "3481                                                NaN   \n",
+      "3491  Multimodal sentiment analysis is the task of p...   \n",
+      "\n",
+      "                                               children  \\\n",
+      "2                                                   NaN   \n",
+      "9                           chatbot,dialogue-generation   \n",
+      "10                      multi-label-text-classification   \n",
+      "11    continual-named-entity-recognition,class-incre...   \n",
+      "13                               cyber-attack-detection   \n",
+      "...                                                 ...   \n",
+      "3360  deep-nonparametric-clustering,trajectory-clust...   \n",
+      "3459                     open-domain-question-answering   \n",
+      "3466         semeval-2022-task-4-1-binary-pcl-detection   \n",
+      "3481                                        code-repair   \n",
+      "3491                                                NaN   \n",
+      "\n",
+      "                                                parents  num_evals  \n",
+      "2                   model-compression,2d-classification          1  \n",
+      "9                                               chatbot          1  \n",
+      "10    text-classification,multi-label-text-classific...         20  \n",
+      "11                                   continual-learning         29  \n",
+      "13           cyber-attack-detection,activity-prediction          0  \n",
+      "...                                                 ...        ...  \n",
+      "3360                                    deep-clustering          5  \n",
+      "3459  question-answering,open-domain-question-answering         15  \n",
+      "3466  pcl-detection,semeval-2022-task-4-1-binary-pcl...          1  \n",
+      "3481                                        code-repair          1  \n",
+      "3491                                 sentiment-analysis          5  \n",
+      "\n",
+      "[242 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Well that makes sense. 242 duplicates mean 121 tasks are repeated in the tasks_by_area.csv file.\n",
+    "\n",
+    "3371 + 121 = 3492, which is the total number of tasks in the dataset."
+   ],
+   "id": "6f185c02696ba5a2"
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "20f99c52854f2560"
+   "id": "851f82b496f41fd7"
   }
  ],
  "metadata": {
